Alow publish/unpublish/save draft/update published articles

--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,13 +1,41 @@
+= javascript_include_tag 'jquery-ui.min', :cache => true
+= javascript_include_tag 'vendor/jquery.slideto.min', :cache => true
+
 = render :partial => "shared/nav"
 
-.block
+#edit_article.block
   .content
     %h2.title
       = t(:editing_article)
     .inner
+      .action
+        %button{:id => "jump_to_project", :class => "button"}=t('jump_to_project')
+      .clear
+      %br
       .form
         = render 'form'
 
-= link_to raw("&larr; #{t(:show_article)} (#{@article.title})"), @article
-\|
-= link_to raw("&larr; #{t(:back_to_articles)}"), articles_path
+.action
+  %button{:id => "jump_to_article", :class => "button"}=t('jump_to_article')
+.clear
+%br
+
+=render @project
+
+
+:javascript
+  $(document).ready(function(){
+    $('a.icon.show').zoombox({width: 960, height: 600, overflow: true});
+
+    $("#jump_to_project").bind('click', function(){
+      $(".project.block").slideto({
+        //highlight_duration: 'fast'
+      });
+    });
+
+    $("#jump_to_article").bind('click', function(){
+      $("#edit_article.block").slideto({
+        //highlight_duration: 'fast'
+      });
+    });
+  });
