--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -2,7 +2,7 @@
 
 .block
   .content
-    = model_title_links(@article, t="title")
+    = article_title_links(@article, t="title")
     .inner
       %p= raw(RDiscount.new(@article.content).to_html) rescue nil
       
