--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,6 +1,7 @@
 -content_for :head do
   = stylesheet_link_tag 'wmd/wmd.css'
   = javascript_include_tag 'vendor/wmd/wmd.combined.min'
+  = stylesheet_link_tag 'compiled/articles', :cache => true
 
 = form_for @article do |f|
   -if @article.errors.any?
@@ -28,10 +29,15 @@
       = f.label :published_at, :class => 'label'
       = f.datetime_select :published_at
 
-      = f.hidden_field :project_id, :value => @project.id
+      = f.hidden_field :project_id
+      / = f.hidden_field :draft
 
-    .actions
-      = f.submit 'Save'
+    .actions-bar.wat-cf
+      .actions
+        = link_to t("cancel"), (@article.persisted? ? @article : articles_path), :class => "fancy-button"
+        %span.right
+          = f.submit t("save"), :class => "fancy-button"
+          = f.submit t("publish"), :name => "article[publish]", :class => "fancy-button"
 
 :javascript
   setup_wmd({
