--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,7 +33,7 @@
                 Copyright &copy; #{Time.now.year}
         #sidebar
           = yield :sidebar
-          -unless( params[:controller] =~ /settings/ || !user_signed_in?)
+          -unless( params[:controller] =~ /articles/ || params[:controller] =~ /settings/ || !user_signed_in?)
             .block
               %h3=t(:Settings)
               .content
