--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -45,14 +45,8 @@
                 = image_fields.file_field :asset, :class => 'file_field'
                 = image_fields.text_field :title, :class => 'text_field'
                 %span.description Image Caption
-        
-        .field.group
-          %label.label Old Images:
-          =f.fields_for :images do |image_fields|
-            -unless image_fields.object.new_record?
-              .field.group
-                =image_tag image_fields.object.asset_url(:thumb).to_s, :alt =>image_fields.object.title
-                =link_to 'Delete', {:controller => 'images', :action => 'destroy', :id => image_fields.object}, :method => :delete, :confirm => 'Are you sure?', :class => 'button'
+        #image_list
+          =render :partial => "form_images", :locals => {:f => f}
 
     .column.right
       #map
