--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -2,13 +2,13 @@
 @import "compass/typography/links/unstyled-link"
 @import "compass/typography/links/link-colors"
 
-#projects
+#projects, #events
   a
     +unstyled-link
     // link-colors($normal, $hover, $active, $visited, $focus)
     +link-colors(#555, #222, #c0c, #888, #009)
 
-#project
+#project, #events
   +background-image(linear-gradient(#eee, #eee))
   +border-radius(5px)
   padding: 4px
