fixed typo events css.

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -8,7 +8,7 @@
     // link-colors($normal, $hover, $active, $visited, $focus)
     +link-colors(#555, #222, #c0c, #888, #009)
 
-#project, #events
+#project, #event
   +background-image(linear-gradient(#eee, #eee))
   +border-radius(5px)
   padding: 4px
