Advance search title.

--- a/app/views/search/projects.haml
+++ b/app/views/search/projects.haml
@@ -2,7 +2,7 @@
 
 .block-forms.block
   .content
-    %h2.title=t('advance_projects_search')
+    %h2.title=t('advance_search')
     .inner
       =render :partial => 'form', :locals => {:search_object => @project_search}
       / results
