--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,5 +1,5 @@
-= javascript_include_tag 'jquery-ui.min', :cache => true
-= javascript_include_tag 'vendor/jquery.slideto.min', :cache => true
+= javascript_include_tag 'jquery-ui.min'
+= javascript_include_tag 'vendor/jquery.slideto.min'
 
 = render :partial => "shared/nav"
 
