--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,5 +1,5 @@
-= javascript_include_tag 'jquery-ui.min', :cache => true
-= javascript_include_tag 'vendor/jquery.slideto.min', :cache => true
+= javascript_include_tag 'jquery-ui.min'
+= javascript_include_tag 'vendor/jquery.slideto.min'
 
 = render :partial => "shared/nav"
 
@@ -21,7 +21,6 @@
 %br
 
 =render @project
-
 
 :javascript
   $(document).ready(function(){
