removed references to events from views.

--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -80,7 +80,7 @@
           .columns.wat-cf
             .column.left
               / recent events
-              %h3=t('events_since_login')
+              %h3=t('activities_since_login')
               #events
                 =render :partial => "event", :collection => @events
 
