--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -4,5 +4,5 @@
   %li{ :class => ("active" if controller.controller_name =~ /sectors/i) }= link_to t(:sectors), sectors_url
   %li{ :class => ("active" if controller.controller_name =~ /partners/i) }= link_to t(:partners), partners_url
   %li{ :class => ("active" if controller.controller_name =~ /locations/i) }=link_to t(:locations), locations_url
-  %li{ :class => ("active" if controller.controller_name =~ /articles/i) }=link_to t(:articles), articles_url
+  / %li{ :class => ("active" if controller.controller_name =~ /articles/i) }=link_to t(:articles), articles_url
   %li{ :class => ("active" if controller.controller_name =~ /search/i) }=link_to t(:search), search_url
